--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
-DISCORD_TOKEN=
+DISCORD_TOKEN=MTI0NDE3NDIzMTI5NDQ0NzY5Nw.Gedfeq.HvIlbDyTctxQVux2upWYpAMpt_nPJT-JOcsTeQ
 MONGO_TOKEN=
 GIPHY_TOKEN=
-WEBHOOK_ID=
-WEBHOOK_TOKEN=
-DISCORD_ID=
-OWNER_ID=
+WEBHOOK_ID=1244224623172915200
+WEBHOOK_TOKEN=HPceMt8-_aKHd2F15JuAZteO4-wbT4L7HxN3aanuf40P5tvSEtPaiB2jg1LH36OQtucn
+DISCORD_ID=1244174231294447697
+OWNER_ID=936202587600994335
 GROQ=
 
 # Not neccessary variables
